--- a/www/templates/boardPage/tab-board.html
+++ b/www/templates/boardPage/tab-board.html
@@ -3,11 +3,11 @@
         <div class="board-internal-wrapper">
             <div class="board-wrapper">
 
-                <button class="button missed missed-left missed-top" ng-click="missedBoardClick()">
+                <button class="button missed missed-left missed-top button-assertive" ng-click="missedBoardClick()">
                     Missed
                 </button>
 
-                <button class="button missed missed-right missed-top" ng-click="missedBoardClick()">
+                <button class="button missed missed-right missed-top button-assertive" ng-click="missedBoardClick()">
                     Missed
                 </button>
 
@@ -19,11 +19,11 @@
                     </board-item>
                 </div>
 
-                <button class="button missed missed-left missed-bottom" ng-click="missedBoardClick()">
+                <button class="button missed missed-left missed-bottom button-assertive" ng-click="missedBoardClick()">
                     Missed
                 </button>
 
-                <button class="button missed missed-right missed-bottom" ng-click="missedBoardClick()">
+                <button class="button missed missed-right missed-bottom button-assertive" ng-click="missedBoardClick()">
                     Missed
                 </button>
             </div>
