--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -174,3 +174,8 @@
     display: flex;
     flex-direction: column;
     padding-left: 10px; }
+
+.settings-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
