--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,5 +15,9 @@ navigation history that also transitions its views in and out.
         <ion-nav-view name="tab-board"></ion-nav-view>
     </ion-tab>
 
+    <ion-tab title="Settings" icon-off="ion-ios-cog-outline" icon-on="ion-ios-cog" href="#/tab/settings">
+        <ion-nav-view name="tab-settings"></ion-nav-view>
+    </ion-tab>
+
 
 </ion-tabs>
