--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -7,3 +7,9 @@
   top: $top;
   transform: $rotate;
 }
+
+@mixin centerFlexColumn() {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
