--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,6 +15,10 @@ navigation history that also transitions its views in and out.
         <ion-nav-view name="tab-board"></ion-nav-view>
     </ion-tab>
 
+    <ion-tab title="Players" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/players">
+        <ion-nav-view name="tab-players"></ion-nav-view>
+    </ion-tab>
+
     <ion-tab title="Settings" icon-off="ion-ios-cog-outline" icon-on="ion-ios-cog" href="#/tab/settings">
         <ion-nav-view name="tab-settings"></ion-nav-view>
     </ion-tab>
