--- a/scss/partials/_dashboard.scss
+++ b/scss/partials/_dashboard.scss
@@ -1,7 +1,5 @@
 .dashboard-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include centerFlexColumn;
 
   .new-game-wrapper {
     display: flex;
