--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -11,7 +11,8 @@
 
 .board-internal-wrapper {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  z-index: 0; }
   .board-internal-wrapper .board-wrapper {
     position: relative;
     width: 100%;
@@ -20,7 +21,8 @@
     border: 1px dashed red;
     background-image: url("../../www/images/dart-board.jpg");
     background-repeat: no-repeat;
-    background-size: contain; }
+    background-size: contain;
+    z-index: 1; }
     .board-internal-wrapper .board-wrapper .item-buttons-wrapper {
       display: flex;
       flex-direction: column;
@@ -179,3 +181,21 @@
   display: flex;
   flex-direction: column;
   align-items: center; }
+
+.players-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .players-wrapper .players-list-wrapper .players-list .single-player {
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .players-wrapper .players-list-wrapper .players-list .single-player .button.button-light {
+      width: 100%;
+      height: 100%; }
+    .players-wrapper .players-list-wrapper .players-list .single-player.create-new-player .button.button-light .new-player-icon {
+      color: #387ef5;
+      font-size: 100px; }
